--- a/config/locales/cpanel.zh-CN.yml
+++ b/config/locales/cpanel.zh-CN.yml
@@ -7,3 +7,10 @@
     value: '值'
     summary: '简介'
     submit: '保 存'
+
+  sections:
+    title: '分类'
+    name: '名称'
+    sort: '排序'
+    summary: '简介'
+    submit: '保 存'
